# wvu-ieng-331-m2-19

./: .gitignore  DESIGN.md  GRADE.md  README.md  pyproject.toml
sql/: abc_inventory_classification.sql  cohort_retention_analysis.sql  data_audit.sql  delivery_time_by_geography.sql  seller_performance_scorecard.sql
src/wvu_ieng_331_m2_19/: pipeline.py  queries.py  validation.py
